Implementando funçao para gerar certificados automaticamente.